# fundlens

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  SETUP_DAY2.md  SETUP_DAY3_AM.md  SETUP_DAY3_PM.md  __init__.py  codes.py  db.py  fetcher.py  pyproject.toml  query.py  schema.sql  sync.py
.claude/: settings.local.json
.github/workflows/: ci.yml
fundlens/: compute.py  db.py  fetcher.py
fundlens/indicators/: __init__.py  momentum.py  risk.py
indicators/: momentum.py  trend.py
tests/: test_db.py  test_indicators.py
web/: .env.local.example  .eslintrc.json  instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/[code]/: page.tsx
web/app/api/funds/: route.ts
web/app/api/indicators/[code]/: route.ts
web/app/api/prices/[code]/: route.ts
web/app/api/research/[code]/: route.ts
web/app/api/research/[code]/prompt/: route.ts
web/app/api/signal/[code]/: route.ts
web/components/: ai-research.tsx  chart.tsx  fund-card.tsx  indicator-panel.tsx  range-tabs.tsx  signal-card.tsx
web/lib/: ai-cache.ts  ai.ts  db-init.ts  db.ts  queries.ts  signals.ts  types.ts
